test(bem06): add unit tests for JPA services and controllers and scope jacoco coverage